--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -231,6 +231,21 @@
     "dog_files_short = train_files[:100]\n",
     "# Do NOT modify the code above this line.\n",
     "\n",
+    "humans_as_humans = 0\n",
+    "dogs_as_humans = 0\n",
+    "for i in range(len(human_files_short)):\n",
+    "    result = face_detector(human_files_short[i])\n",
+    "    if result == True:\n",
+    "        humans_as_humans +=1\n",
+    "        \n",
+    "for i in range(len(dog_files_short)):\n",
+    "    result = face_detector(dog_files_short[i])\n",
+    "    if result == True:\n",
+    "        dogs_as_humans +=1\n",
+    "\n",
+    "\n",
+    "print('Percentage of humans detected as humans: {} %'.format(humans_as_humans))    \n",
+    "print('Percentage of dogs detected as humans: {} %'.format(dogs_as_humans))    \n",
     "## TODO: Test the performance of the face_detector algorithm \n",
     "## on the images in human_files_short and dog_files_short."
    ]
@@ -413,7 +428,24 @@
    "outputs": [],
    "source": [
     "### TODO: Test the performance of the dog_detector function\n",
-    "### on the images in human_files_short and dog_files_short."
+    "### on the images in human_files_short and dog_files_short.\n",
+    "\n",
+    "doggos_as_doggos = 0\n",
+    "humans_as_doggos = 0\n",
+    "\n",
+    "for i in range(len(human_files_short)):\n",
+    "    result = dog_detector(human_files_short[i])\n",
+    "    if result == True:\n",
+    "        humans_as_doggos +=1\n",
+    "        \n",
+    "for i in range(len(dog_files_short)):\n",
+    "    result = dog_detector(dog_files_short[i])\n",
+    "    if result == True:\n",
+    "        doggos_as_doggos +=1\n",
+    "\n",
+    "\n",
+    "print('Percentage of humans detected as dogs: {} %'.format(humans_as_doggos))    \n",
+    "print('Percentage of dogs detected as dogs: {} %'.format(doggos_as_doggos)) "
    ]
   },
   {
@@ -1019,9 +1051,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "dog-project",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dog-project"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1033,7 +1065,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
