Step 7: Done (more or less)
Completed answer to Q6
Added some additional code to further test face and dog detectors, and to save final dog breed model for use in application

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -293,6 +293,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"{0} faces detected in human_files\".format(np.count_nonzero(vface(human_files[:1000]))))\n",
+    "print(\"{0} faces detected in dog_files\".format(np.count_nonzero(vface(dog_files[:1000]))))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -472,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -489,6 +501,16 @@
     "vdog = np.vectorize(dog_detector)\n",
     "print(\"{0} dogs detected in human_files_short\".format(np.count_nonzero(vdog(human_files_short))))\n",
     "print(\"{0} dogs detected in dog_files_short\".format(np.count_nonzero(vdog(dog_files_short))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"{0} faces detected in human_files\".format(np.count_nonzero(vdog(human_files[:1000]))))\n",
+    "print(\"{0} faces detected in dog_files\".format(np.count_nonzero(vdog(dog_files[:1000]))))"
    ]
   },
   {
@@ -1424,11 +1446,11 @@
     "    \"\"\"\n",
     "    \n",
     "    species = \"Other\"\n",
-    "    if face_detector(image_path):\n",
-    "        species = \"Human\"\n",
-    "    elif dog_detector(image_path):\n",
+    "    if dog_detector(image_path):\n",
     "        species = \"Dog\"\n",
-    "        \n",
+    "    elif face_detector(image_path):\n",
+    "        species = \"Human\"\n",
+    "\n",
     "    if species == \"Other\":\n",
     "        title = \"You are not a Human or a Dog!\"\n",
     "    else:\n",
@@ -1475,8 +1497,12 @@
     "__Answer:__ \n",
     "\n",
     "* Output looks better than I expected :)\n",
-    "* Examples from training data are matched correctly\n",
-    "* Other examples are at least plausible"
+    "    * Examples from training data are matched correctly\n",
+    "    * Even the dog breeds for humans are at least plausible\n",
+    "* Possible improvements\n",
+    "    * Fine-tune the face detector to increase it's accuracy (for non-humans)\n",
+    "    * Fine-tune the dog breed classifier to increase it's accuracy\n",
+    "    * Use and display probabilties for each decision."
    ]
   },
   {
@@ -1629,6 +1655,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_model.save(\"saved_models/model.final.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    " \n",
+    "saved_model = load_model(\"saved_models/model.final.hdf5\")\n",
+    "saved_model.summary()"
+   ]
   }
  ],
  "metadata": {
